--- a/q1.ipynb
+++ b/q1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -54,13 +54,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "def line_chart(df, date_col, group_col, years=None, title=None):\n",
     "    \"\"\"plots counts per year for categories in group_col for \n",
     "    given num of years\"\"\"\n",
@@ -99,14 +96,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/7l/h7qnw85j2hlf4tgr241lw5f00000gn/T/ipykernel_48386/2800345279.py:19: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "/var/folders/7l/h7qnw85j2hlf4tgr241lw5f00000gn/T/ipykernel_48386/3457518763.py:16: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "  df.groupby([\"Year\", group_col])\n"
      ]
     },
@@ -129,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -234,17 +231,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Safety Score for 2022: 81.27\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def safety_score(df, date_col, fatal_col):\n",
     "    \"\"\"compute safety score for the most recent year: cafety Score = % of non-fatal events\"\"\"\n",
@@ -263,9 +252,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Safety Score for 2022: 81.27\n"
+     ]
+    }
+   ],
    "source": [
     "year, score = safety_score(df, \"Event.Date\", \"Total.Fatal.Injuries\")\n",
     "print(f\"Safety Score for {year}: {score:.2f}\")"
@@ -273,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -300,11 +297,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
     "# make dashboard here "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "some explanation of all the viz "
    ]
   }
  ],
